- New feature: Greyscale World (PS2)
- Mod Menu: More understandable names and descriptions
- Fixed default values for character health.
- Randomize Character Parameters: No longer changes jump parameteres.

Crash Tag Team Racing:
- Randomize Race Laps: Rings of Uranus now randomized between 3 and 12 laps.

Rayman 3: Hoodlum Havoc:
- Mod Menu+ enabled (GCN)

Crash Bandicoot:
- Backwards Hog Levels: Removed checkpoints because they didn't work anyway.

Crash Bandicoot 2: Cortex Strikes Back:
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Ranodmize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.

Crash Bandicoot: WARPED:
- New feature: Randomize World Textures
- New feature: Randomize Object Colors
- New feature: Randomize Object Textures
- New feature: Randomize Streamed Audio
- New feature: Ranodmize Pants Color
- Pants color can now be customized in the Mod Menu.
- Randomize Crate Counter: Adjusted minimum counts to prevent impossible scenarios.
- Backwards Levels: Disabled Tell No Tales due to exiting problems.

1.2.1

Crash Twinsanity:
- Fixed processing errors in some versions of the game

1.2.0

General:  
- Added support for Xbox 360 ROMs and directories (can only output to folder).  
- Improved Xbox ROM detection speed.  
- Added a warning if the program fails to verify a Mod Crate.  
- Console/Region specific options will not appear on unsupported versions anymore.  
- The window will now flash when the process is complete.  
- Options now show a description when selected.  
- Mod Menus have been implemented. Variables can be edited in the menu, loaded from a text file or Mod Crate, and saved to a text file or Mod Crate.