@@ -3,7 +3,6 @@ Crate Mod Loader Supported Games
 Crash Nitro Kart
 Supported: All PS2 versions (.ISO format), All GC versions (.ISO format), All XBOX versions (.ISO format)  
 Mod abbreviation: CrashNK  
-Mod Menu enabled.
 Mod layers: 1 - ASSETS.GOB contents
 Tools/API by BetaM, ManDude and eezstreet.  
 Features:  
@@ -18,15 +17,16 @@ Features:
 - Speed Up Mask Hint Appearance  
 - Remove Intro Videos  
 - Version, seed and settings visible in the Credits screen
+Mod Menu:
+- Individual character and kart physics parameters
+- UI Textures
   
 Crash Twinsanity
 Supported: All PS2 versions (.ISO format), All XBOX versions (.ISO format)
-Mod abbreviation: CrashTS  
-Mod Menu enabled.  
+Mod abbreviation: CrashTS   
 Mod layers: 1 - CRASH.BD contents (Same as Layer 0 on XBOX)
 API by NeoKesha, Smartkin, ManDude, BetaM and Marko. (https://github.com/Smartkin/twinsanity-editor)  
 Features:  
-- Randomize Crate Types  
 - Randomize Individual Crates
 - Randomize Gem Locations   
 - Randomize Level Music  
@@ -35,9 +35,17 @@ Features:
 - Enable Stomp Kick for Crash (Flying Kick variation)  
 - Enable Double Jump for Cortex  
 - Enable Double Jump for Nina  
-- Enable Some Unused Enemies  
+- Enable Unused Enemies  
 - Switch Characters At Will
+- Classic Health
+- Classic Explosion Damage
+- Untextured World
+- Greyscale World (PS2)
 - Version, seed and settings visible in the Autosave Disabled screen  
+Mod Menu:
+- Randomize Crate Types  
+- Individual character parameters
+- Starting chunk
   
 Crash Tag Team Racing
 Supported: All PS2 versions (.ISO format), All GC versions (.ISO format), All PSP versions (.ISO format), All XBOX versions (.ISO format)  
@@ -51,6 +59,8 @@ Features:
 - Randomize Race Laps
 - Prevent Sequence Breaks
 - Version, seed and settings visible in the Credits screen
+Mod Menu:
+- Individual Race laps
 
 Rayman 3: Hoodlum Havoc
 Supported: All PS2 versions (.ISO format), All GC versions (.ISO format), All XBOX versions (.ISO format)
@@ -60,32 +70,34 @@ Features:
 - Randomize Outfit Visuals (GC Only)  
 - New Game Into 2D Nightmare (GC Only)  
 - Remove Intro Videos (GC Only)  
+Mod Menu:
+- Rayman Textures
+- UI and other common Textures
 
 Crash Bandicoot
 Supported: All PS1 versions (.BIN/.ISO formats)  
 Mod abbreviation: Crash1 
 API by chekwob and ManDude. (https://github.com/cbhacks/CrashEdit)  
 Features:  
-- All Crates Are Blank
-- All Crates Are Wumpa
 - Backwards Levels
 - Random Levels Are Backwards
 - Randomize Crate Contents
 - Randomize Boss Levels
 - Wider Camera Field-Of-View
-- Randomize Camera Field-Of-View
 - Randomize World Colors
 - Randomize World Palette
 - Randomize Sound Effects  
 - Version and seed visible in the Main Menu
+Mod Menu:
+- All Crates Are Blank
+- All Crates Are Wumpa
+- Randomize Camera Field-Of-View
   
 Crash Bandicoot 2: Cortex Strikes Back
 Supported: All PS1 versions (.BIN/.ISO formats)  
 Mod abbreviation: Crash2  
 API by chekwob and ManDude. (https://github.com/cbhacks/CrashEdit)  
 Features:  
-- All Crates Are Blank
-- All Crates Are Wumpa
 - Randomize Warp Room Exits
 - Backwards Levels 
 - Random Levels Are Backwards
@@ -93,33 +105,48 @@ Features:
 - Randomize Crate Counter
 - Randomize Boss Levels
 - Wider Camera Field-Of-View
-- Randomize Camera Field-Of-View
+- Ranodmize Pants Color
 - Randomize World Colors
 - Randomize World Palette
 - Greyscale World
 - Untextured World
 - Randomize Sound Effects  
+- Randomize World Textures
+- Randomize Object Colors
+- Randomize Object Textures
+- Randomize Streamed Audio
 - Version and seed visible in the Pause screen in the Warp Room (English only)  
+Mod Menu:
+- All Crates Are Blank
+- All Crates Are Wumpa
+- Randomize Camera Field-Of-View
+- Customize Pants Color
   
 Crash Bandicoot: Warped
 Supported: All PS1 versions (.BIN/.ISO formats)  
 Mod abbreviation: Crash3  
 API by chekwob and ManDude. (https://github.com/cbhacks/CrashEdit)  
 Features:  
-- All Crates Are Blank
-- All Crates Are Wumpa
 - Backwards Levels
 - Random Levels Are Backwards
 - Randomize Crate Contents
 - Randomize Crate Counter
 - Wider Camera Field-Of-View
-- Randomize Camera Field-Of-View
 - Randomize World Colors
 - Randomize World Palette
 - Greyscale World
 - Untextured World
 - Randomize Sound Effects 
+- Randomize World Textures
+- Randomize Object Colors
+- Randomize Object Textures
+- Randomize Streamed Audio
 - Version and seed visible in the Pause screen in the Warp Room (English only)  
+Mod Menu:
+- All Crates Are Blank
+- All Crates Are Wumpa
+- Randomize Camera Field-Of-View
+- Customize Pants Color
   
 Crash Team Racing
 Supported: All PS1 versions (.BIN/.ISO formats)  
