@@ -26,6 +26,7 @@ Rayman 3: Hoodlum Havoc:
 - Mod Menu+ enabled (GCN)
 
 Crash Bandicoot:
+- New feature: Randomize Wooden Crates
 - Backwards Hog Levels: Removed checkpoints because they didn't work anyway.
 
 Crash Bandicoot 2: Cortex Strikes Back:
